form spacing fixes

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -83,7 +83,7 @@ textarea,
 .blog-search-form{
     background-color: fade(@color-swatch3, 5%);
 	border-left: 1px solid fade(@color-swatch2, 50%);
-	padding: 20px;
+	padding: 20px 25px 25px;
 	fieldset {
 		margin: 0;
 		input {
@@ -100,6 +100,7 @@ textarea,
 
 label, .contactform label, .advancedcontactform label {
 	font-size: @font-swatch5-font-size;
+	line-height: @font-swatch5-line-height;
 }
 
 .form-group {
